--- a/settings/VSCode-Settings.json
+++ b/settings/VSCode-Settings.json
@@ -79,24 +79,24 @@
   },
   "code-runner.enableAppInsights": false,
 
-  // HTML, Jinja2, and Django settings
-  "django.snippets.use": false
-  "[html][django-html][jinja][jinja-html]": {
-    "editor.defaultFormatter": "monosans.djlint",
-    "editor.tabSize": 2
-  },
-  "files.associations": {
-    "*.html": "django-html",
-    "*.svg": "html"
-  },
-  "emmet.includeLanguages": {
-    "django-html": "html"
-  },
-  "djlint.useVenv": false,
-  "djlint.pythonPath": "/opt/pipx/venvs/djlint/bin/python",
-  "djlint.ignore": ["H031", "D004", "H023"],
-  "djlint.maxBlankLines": 1,
-  "djlint.lineBreakAfterMultilineTag": false,
+  // // HTML, Jinja2, and Django settings
+  // "django.snippets.use": false
+  // "[html][django-html][jinja][jinja-html]": {
+  //   "editor.defaultFormatter": "monosans.djlint",
+  //   "editor.tabSize": 2
+  // },
+  // "files.associations": {
+  //   "*.html": "django-html",
+  //   "*.svg": "html"
+  // },
+  // "emmet.includeLanguages": {
+  //   "django-html": "html"
+  // },
+  // "djlint.useVenv": false,
+  // "djlint.pythonPath": "/opt/pipx/venvs/djlint/bin/python",
+  // "djlint.ignore": ["H031", "D004", "H023"],
+  // "djlint.maxBlankLines": 1,
+  // "djlint.lineBreakAfterMultilineTag": false,
 
   // Plaintext settings
   "[plaintext]": {
